--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"DEBUG\"] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"DEBUG\"] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
     "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
@@ -117,7 +117,7 @@
     "\"\"\",\n",
     "]\n",
     "\n",
-    "inputs = [{\"input\": \"is 17077 a prime number\"}, {\"input\": \"Is 17077 prime?\"}]\n",
+    "inputs = [\"is 17077 a prime number\", \"Is 17077 prime?\"]\n",
     "\n",
     "selectors = [PromptSelector(instructions[i], inputs[j]) for i in range(len(instructions)) for j in range(len(inputs))]"
    ]
@@ -176,57 +176,51 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>prompt</th>\n",
-       "      <th>response(s)</th>\n",
+       "      <th>response</th>\n",
        "      <th>latency</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
-       "      <td>\\n\\n93\\nIt is not a prime number, its decomposition is 3</td>\n",
-       "      <td>1.993576</td>\n",
+       "      <td>INSTRUCTION:\\n\\nAnswer the following question. \\nIf it is not prime, give its decomposition.\\n\\nPROMPT:\\nis 17077 a prime number\\nRESPONSE:\\n</td>\n",
+       "      <td>No, 17077 is not a prime number. Its decomposition is 13</td>\n",
+       "      <td>0.970505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
-       "      <td>\\n\\n45\\n\\n45 = 3 x 3 x 5</td>\n",
-       "      <td>0.908900</td>\n",
+       "      <td>INSTRUCTION:\\n\\nAnswer the following question. \\nIf it is not prime, give its decomposition.\\n\\nPROMPT:\\nIs 17077 prime?\\nRESPONSE:\\n</td>\n",
+       "      <td>No, 17077 is not prime. Its decomposition is 79 x 215</td>\n",
+       "      <td>0.895672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>\\nAnswer the following question.</td>\n",
-       "      <td>\\n\\nWhat is the meaning of the phrase \"catching some z's\"?\\n</td>\n",
-       "      <td>0.922788</td>\n",
+       "      <td>INSTRUCTION:\\n\\nAnswer the following question.\\n\\nPROMPT:\\nis 17077 a prime number\\nRESPONSE:\\n</td>\n",
+       "      <td>No, 17077 is not a prime number. It is divisible by</td>\n",
+       "      <td>1.149236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\\nAnswer the following question.</td>\n",
-       "      <td>\\n\\nIn what ways might information literacy skills help students succeed in their studies?</td>\n",
-       "      <td>1.075018</td>\n",
+       "      <td>INSTRUCTION:\\n\\nAnswer the following question.\\n\\nPROMPT:\\nIs 17077 prime?\\nRESPONSE:\\n</td>\n",
+       "      <td>No, 17077 is not a prime number. 17077 is div</td>\n",
+       "      <td>0.921796</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                           prompt  \\\n",
-       "0  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
-       "1  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
-       "2  \\nAnswer the following question.                                                 \n",
-       "3  \\nAnswer the following question.                                                 \n",
+       "                                                                                                                                          prompt  \\\n",
+       "0  INSTRUCTION:\\n\\nAnswer the following question. \\nIf it is not prime, give its decomposition.\\n\\nPROMPT:\\nis 17077 a prime number\\nRESPONSE:\\n   \n",
+       "1  INSTRUCTION:\\n\\nAnswer the following question. \\nIf it is not prime, give its decomposition.\\n\\nPROMPT:\\nIs 17077 prime?\\nRESPONSE:\\n           \n",
+       "2  INSTRUCTION:\\n\\nAnswer the following question.\\n\\nPROMPT:\\nis 17077 a prime number\\nRESPONSE:\\n                                                 \n",
+       "3  INSTRUCTION:\\n\\nAnswer the following question.\\n\\nPROMPT:\\nIs 17077 prime?\\nRESPONSE:\\n                                                         \n",
        "\n",
-       "                                                                                  response(s)  \\\n",
-       "0  \\n\\n93\\nIt is not a prime number, its decomposition is 3                                     \n",
-       "1  \\n\\n45\\n\\n45 = 3 x 3 x 5                                                                     \n",
-       "2  \\n\\nWhat is the meaning of the phrase \"catching some z's\"?\\n                                 \n",
-       "3  \\n\\nIn what ways might information literacy skills help students succeed in their studies?   \n",
-       "\n",
-       "    latency  \n",
-       "0  1.993576  \n",
-       "1  0.908900  \n",
-       "2  0.922788  \n",
-       "3  1.075018  "
+       "                                                   response   latency  \n",
+       "0  No, 17077 is not a prime number. Its decomposition is 13  0.970505  \n",
+       "1  No, 17077 is not prime. Its decomposition is 79 x 215     0.895672  \n",
+       "2  No, 17077 is not a prime number. It is divisible by       1.149236  \n",
+       "3  No, 17077 is not a prime number. 17077 is div             0.921796  "
       ]
      },
      "metadata": {},
@@ -300,7 +294,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>prompt</th>\n",
-       "      <th>response(s)</th>\n",
+       "      <th>response</th>\n",
        "      <th>latency</th>\n",
        "      <th>followed_directions</th>\n",
        "    </tr>\n",
@@ -308,54 +302,54 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
-       "      <td>\\n\\n93\\nIt is not a prime number, its decomposition is 3</td>\n",
-       "      <td>1.993576</td>\n",
+       "      <td>INSTRUCTION:\\n\\nAnswer the following question. \\nIf it is not prime, give its decomposition.\\n\\nPROMPT:\\nis 17077 a prime number\\nRESPONSE:\\n</td>\n",
+       "      <td>No, 17077 is not a prime number. Its decomposition is 13</td>\n",
+       "      <td>0.970505</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
-       "      <td>\\n\\n45\\n\\n45 = 3 x 3 x 5</td>\n",
-       "      <td>0.908900</td>\n",
+       "      <td>INSTRUCTION:\\n\\nAnswer the following question. \\nIf it is not prime, give its decomposition.\\n\\nPROMPT:\\nIs 17077 prime?\\nRESPONSE:\\n</td>\n",
+       "      <td>No, 17077 is not prime. Its decomposition is 79 x 215</td>\n",
+       "      <td>0.895672</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>\\nAnswer the following question.</td>\n",
-       "      <td>\\n\\nWhat is the meaning of the phrase \"catching some z's\"?\\n</td>\n",
-       "      <td>0.922788</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>INSTRUCTION:\\n\\nAnswer the following question.\\n\\nPROMPT:\\nis 17077 a prime number\\nRESPONSE:\\n</td>\n",
+       "      <td>No, 17077 is not a prime number. It is divisible by</td>\n",
+       "      <td>1.149236</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\\nAnswer the following question.</td>\n",
-       "      <td>\\n\\nIn what ways might information literacy skills help students succeed in their studies?</td>\n",
-       "      <td>1.075018</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>INSTRUCTION:\\n\\nAnswer the following question.\\n\\nPROMPT:\\nIs 17077 prime?\\nRESPONSE:\\n</td>\n",
+       "      <td>No, 17077 is not a prime number. 17077 is div</td>\n",
+       "      <td>0.921796</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                           prompt  \\\n",
-       "0  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
-       "1  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
-       "2  \\nAnswer the following question.                                                 \n",
-       "3  \\nAnswer the following question.                                                 \n",
+       "                                                                                                                                          prompt  \\\n",
+       "0  INSTRUCTION:\\n\\nAnswer the following question. \\nIf it is not prime, give its decomposition.\\n\\nPROMPT:\\nis 17077 a prime number\\nRESPONSE:\\n   \n",
+       "1  INSTRUCTION:\\n\\nAnswer the following question. \\nIf it is not prime, give its decomposition.\\n\\nPROMPT:\\nIs 17077 prime?\\nRESPONSE:\\n           \n",
+       "2  INSTRUCTION:\\n\\nAnswer the following question.\\n\\nPROMPT:\\nis 17077 a prime number\\nRESPONSE:\\n                                                 \n",
+       "3  INSTRUCTION:\\n\\nAnswer the following question.\\n\\nPROMPT:\\nIs 17077 prime?\\nRESPONSE:\\n                                                         \n",
        "\n",
-       "                                                                                  response(s)  \\\n",
-       "0  \\n\\n93\\nIt is not a prime number, its decomposition is 3                                     \n",
-       "1  \\n\\n45\\n\\n45 = 3 x 3 x 5                                                                     \n",
-       "2  \\n\\nWhat is the meaning of the phrase \"catching some z's\"?\\n                                 \n",
-       "3  \\n\\nIn what ways might information literacy skills help students succeed in their studies?   \n",
+       "                                                   response   latency  \\\n",
+       "0  No, 17077 is not a prime number. Its decomposition is 13  0.970505   \n",
+       "1  No, 17077 is not prime. Its decomposition is 79 x 215     0.895672   \n",
+       "2  No, 17077 is not a prime number. It is divisible by       1.149236   \n",
+       "3  No, 17077 is not a prime number. 17077 is div             0.921796   \n",
        "\n",
-       "    latency  followed_directions  \n",
-       "0  1.993576  0.0                  \n",
-       "1  0.908900  1.0                  \n",
-       "2  0.922788  0.0                  \n",
-       "3  1.075018  0.0                  "
+       "   followed_directions  \n",
+       "0  0.0                  \n",
+       "1  1.0                  \n",
+       "2  1.0                  \n",
+       "3  1.0                  "
       ]
      },
      "metadata": {},
