--- a/examples/notebooks/test_app.ipynb
+++ b/examples/notebooks/test_app.ipynb
@@ -276,7 +276,9 @@
     }
    ],
    "source": [
-    "experiment.save_experiment(\"TEST_SAVE_NAME\")"
+    "experiment.save_experiment(\"TEST_SAVE_NAME\")\n",
+    "\n",
+    "# experiment.uuid = ...."
    ]
   },
   {
