Adding API key and fixing experiment ID

--- a/examples/notebooks/test_app.ipynb
+++ b/examples/notebooks/test_app.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,13 @@
     "\n",
     "import os\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"HEGELAI_API_KEY\"] = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -77,14 +78,14 @@
        "      <td>0.0</td>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
        "      <td>The first president of the United States was George Washington. He served as president from 1789 to 1797.</td>\n",
-       "      <td>0.859089</td>\n",
+       "      <td>1.934486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.0</td>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
        "      <td>The first president of the United States was George Washington.</td>\n",
-       "      <td>1.121416</td>\n",
+       "      <td>0.709772</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -104,8 +105,8 @@
        "1  The first president of the United States was George Washington.                                             \n",
        "\n",
        "    latency  \n",
-       "0  0.859089  \n",
-       "1  1.121416  "
+       "0  1.934486  \n",
+       "1  0.709772  "
       ]
      },
      "metadata": {},
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -173,13 +174,13 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>The first president of the United States was George Washington. He served as president from 1789 to 1797.</td>\n",
-       "      <td>chatcmpl-87dUDKRQCO6Bq1PdPJLfF3vsXeluE</td>\n",
+       "      <td>chatcmpl-88ccstwsKs3yan1ESPBTb5RgP40NF</td>\n",
        "      <td>chat.completion</td>\n",
-       "      <td>1696830773</td>\n",
+       "      <td>1697065794</td>\n",
        "      <td>gpt-3.5-turbo-0613</td>\n",
        "      <td>[{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}]</td>\n",
        "      <td>{'prompt_tokens': 23, 'completion_tokens': 24, 'total_tokens': 47}</td>\n",
-       "      <td>0.859089</td>\n",
+       "      <td>1.934486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -192,13 +193,13 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>The first president of the United States was George Washington.</td>\n",
-       "      <td>chatcmpl-87dUEABSL6dfbEQqDw6Mc61cKh42s</td>\n",
+       "      <td>chatcmpl-88cct1W9crL65HnRz5uBkVa4Nk4L3</td>\n",
        "      <td>chat.completion</td>\n",
-       "      <td>1696830774</td>\n",
+       "      <td>1697065795</td>\n",
        "      <td>gpt-3.5-turbo-0613</td>\n",
        "      <td>[{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington.'}, 'finish_reason': 'stop'}]</td>\n",
        "      <td>{'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}</td>\n",
-       "      <td>1.121416</td>\n",
+       "      <td>0.709772</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -222,8 +223,8 @@
        "1  The first president of the United States was George Washington.                                             \n",
        "\n",
        "                              response_id  response_object  response_created  \\\n",
-       "0  chatcmpl-87dUDKRQCO6Bq1PdPJLfF3vsXeluE  chat.completion  1696830773         \n",
-       "1  chatcmpl-87dUEABSL6dfbEQqDw6Mc61cKh42s  chat.completion  1696830774         \n",
+       "0  chatcmpl-88ccstwsKs3yan1ESPBTb5RgP40NF  chat.completion  1697065794         \n",
+       "1  chatcmpl-88cct1W9crL65HnRz5uBkVa4Nk4L3  chat.completion  1697065795         \n",
        "\n",
        "       response_model  \\\n",
        "0  gpt-3.5-turbo-0613   \n",
@@ -238,11 +239,11 @@
        "1  {'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}   \n",
        "\n",
        "    latency  \n",
-       "0  0.859089  \n",
-       "1  1.121416  "
+       "0  1.934486  \n",
+       "1  0.709772  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -261,24 +262,36 @@
      "output_type": "stream",
      "text": [
       "Creating serialized state of experiment...\n",
-      "Sending HTTP POST...\n"
+      "Sending HTTP POST request...\n",
+      "<Response [200]>\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "res = experiment.save_experiment(\"TEST_SAVE_NAME\")\n",
+    "\n",
+    "print(res)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "'e3882118-08e5-43c2-8d2d-2db118fbc60b'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "experiment.save_experiment(\"TEST_SAVE_NAME\")\n",
-    "\n",
-    "# experiment.uuid = ...."
+    "experiment._experiment_id"
    ]
   },
   {
@@ -315,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,144 +336,22 @@
      "output_type": "stream",
      "text": [
       "Sending HTTP GET request...\n",
-      "Loaded experiment.\n"
+      "Error: 500, {\n",
+      "  \"error\": \"\\\"['_id', 'user_id', 'experiment_id', 'experiment_name', 'timestamp'] not found in axis\\\"\"\n",
+      "}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "experiment_from_load = OpenAIChatExperiment.load_experiment('c5f7e53f-7c69-474e-aa4a-b9df17efca45')"
+    "experiment_from_load = OpenAIChatExperiment.load_experiment(\"e3882118-08e5-43c2-8d2d-2db118fbc60b\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>messages</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>top_p</th>\n",
-       "      <th>n</th>\n",
-       "      <th>stream</th>\n",
-       "      <th>presence_penalty</th>\n",
-       "      <th>frequency_penalty</th>\n",
-       "      <th>response</th>\n",
-       "      <th>response_id</th>\n",
-       "      <th>response_object</th>\n",
-       "      <th>response_created</th>\n",
-       "      <th>response_model</th>\n",
-       "      <th>response_choices</th>\n",
-       "      <th>response_usage</th>\n",
-       "      <th>latency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>gpt-3.5-turbo</td>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>The first president of the United States was George Washington. He served as president from 1789 to 1797.</td>\n",
-       "      <td>chatcmpl-87dUDKRQCO6Bq1PdPJLfF3vsXeluE</td>\n",
-       "      <td>chat.completion</td>\n",
-       "      <td>1696830773</td>\n",
-       "      <td>gpt-3.5-turbo-0613</td>\n",
-       "      <td>[{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}]</td>\n",
-       "      <td>{'prompt_tokens': 23, 'completion_tokens': 24, 'total_tokens': 47}</td>\n",
-       "      <td>0.859089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>gpt-3.5-turbo</td>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>The first president of the United States was George Washington.</td>\n",
-       "      <td>chatcmpl-87dUEABSL6dfbEQqDw6Mc61cKh42s</td>\n",
-       "      <td>chat.completion</td>\n",
-       "      <td>1696830774</td>\n",
-       "      <td>gpt-3.5-turbo-0613</td>\n",
-       "      <td>[{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington.'}, 'finish_reason': 'stop'}]</td>\n",
-       "      <td>{'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}</td>\n",
-       "      <td>1.121416</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           model  \\\n",
-       "0  gpt-3.5-turbo   \n",
-       "1  gpt-3.5-turbo   \n",
-       "\n",
-       "                                                                                                                       messages  \\\n",
-       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
-       "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
-       "\n",
-       "   temperature  top_p  n  stream  presence_penalty  frequency_penalty  \\\n",
-       "0  0.0          1.0    1  False   0.0               0.0                 \n",
-       "1  1.0          1.0    1  False   0.0               0.0                 \n",
-       "\n",
-       "                                                                                                    response  \\\n",
-       "0  The first president of the United States was George Washington. He served as president from 1789 to 1797.   \n",
-       "1  The first president of the United States was George Washington.                                             \n",
-       "\n",
-       "                              response_id  response_object  response_created  \\\n",
-       "0  chatcmpl-87dUDKRQCO6Bq1PdPJLfF3vsXeluE  chat.completion  1696830773         \n",
-       "1  chatcmpl-87dUEABSL6dfbEQqDw6Mc61cKh42s  chat.completion  1696830774         \n",
-       "\n",
-       "       response_model  \\\n",
-       "0  gpt-3.5-turbo-0613   \n",
-       "1  gpt-3.5-turbo-0613   \n",
-       "\n",
-       "                                                                                                                                                                                    response_choices  \\\n",
-       "0  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington. He served as president from 1789 to 1797.'}, 'finish_reason': 'stop'}]   \n",
-       "1  [{'index': 0, 'message': {'role': 'assistant', 'content': 'The first president of the United States was George Washington.'}, 'finish_reason': 'stop'}]                                             \n",
-       "\n",
-       "                                                       response_usage  \\\n",
-       "0  {'prompt_tokens': 23, 'completion_tokens': 24, 'total_tokens': 47}   \n",
-       "1  {'prompt_tokens': 23, 'completion_tokens': 11, 'total_tokens': 34}   \n",
-       "\n",
-       "    latency  \n",
-       "0  0.859089  \n",
-       "1  1.121416  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "experiment_from_load.full_df"
    ]
@@ -1091,15 +982,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x2e4c45720>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "\n",
+    "MONGO_ADDRESS = 'mongodb://localhost:27017/'\n",
+    "DATABASE_NAME = 'playground'\n",
+    "EXPERIMENTS = 'experiments'\n",
+    "EXPERIMENT_LOGS_COLLECTION_NAME = 'experiment_logs'\n",
+    "\n",
+    "# Connect to MongoDB\n",
+    "client = MongoClient(MONGO_ADDRESS)\n",
+    "db = client[DATABASE_NAME]\n",
+    "experiments_collection = db[EXPERIMENTS]\n",
+    "logs_collection = db[EXPERIMENT_LOGS_COLLECTION_NAME]\n",
+    "\n",
+    "\n",
+    "# experiments_collection.delete_many({})\n",
+    "# logs_collection.delete_many({})"
+   ]
   },
   {
    "cell_type": "code",
